# tophat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  ax_boost_base.m4  ax_boost_thread.m4  bootstrap  configure.ac  git_revision.sh  make_bin.sh  make_src.sh  unbootstrap
projects/tophat/trunk/: AUTHORS  COPYING  LICENSE  Makefile.am  NEWS  README  THANKS  autogen.sh  ax_bam.m4  ax_boost_thread.m4  configure.ac  make_bin.sh  make_src.sh  unbootstrap
projects/tophat/trunk/TopHat.xcodeproj/: cole.pbxuser  cole.perspectivev3  project.pbxproj
projects/tophat/trunk/build-aux/: tophat.mk
projects/tophat/trunk/fusion_test/: run_test.sh  test_fusion_inter2.fasta  test_fusion_intra.fasta  test_indel_intra.fasta  test_junction_inter.fasta  test_junction_inter2.fasta  test_junction_intra.fasta  test_junction_intra2.fasta  test_total_intra2.fasta
projects/tophat/trunk/src/: FastaTools.cpp  FastaTools.h  GBase.cpp  GList.hh  GTFToFasta.cpp  GTFToFasta.h  Makefile.am  Makefile.nolibs  align_status.cpp  align_status.h  alphabet.c  alphabet.h  assert_helpers.h  bam2fastx.cpp  bam_merge.cpp  bam_merge.h  bam_merge_impl.cpp  bed_to_juncs  bwt_map.cpp  bwt_map.h  closures.cpp  closures.h  common.cpp  common.h  const.h  contig_to_chr_coords.py  coverage.cpp  coverage.h  cvg_islands.cpp  deletions.cpp  deletions.h  expressed_isoforms.cpp  extract_reads.cpp  filter_garbage.cpp  fix_map_ordering.cpp  fragments.cpp  fragments.h  fusions.cpp  fusions.h  generate_chromosome.pl  (+42 more)
src/: FastaTools.cpp  FastaTools.h  GBase.h  GTFToFasta.cpp  GTFToFasta.h  Makefile.am  Makefile.nolibs  align_status.cpp  align_status.h  alphabet.h  bam2fastx.cpp  bam_merge.cpp  bam_merge.h  bam_merge_impl.cpp  bwt_map.cpp  bwt_map.h  closures.cpp  closures.h  common.cpp  common.h  coverage.cpp  coverage.h  cvg_islands.cpp  deletions.cpp  deletions.h  extract_reads.cpp  filter_garbage.cpp  fix_map_ordering.cpp  fq_all2std.pl  fragments.cpp  fragments.h  fusions.cpp  fusions.h  gdna.cpp  generate_chromosome.py  genes.cpp  genes.h  gff.cpp  gff_juncs.cpp  gtf_juncs.cpp  (+38 more)
src/FSA/: fsa_alphabet.cc  fsa_alphabet.h  gff.cc  gff.h  misc.cc  misc.h  regexp.cc  regexp.h  sequence.h
src/SeqAn-1.1/seqan/modifier/: modifier_iterator.h  modifier_reverse.h  modifier_shortcuts.h  modifier_view.h
src/SeqAn-1.2/: README
src/SeqAn-1.2/seqan/: blast.h  chaining.h  find.h  graph_algorithms.h  graph_msa.h  graph_types.h  modifier.h  pipe.h  statistical_index.h
src/SeqAn-1.2/seqan/align/: align_algorithms.h  align_base.h  align_cols_base.h  align_dynprog.h  align_generated_forwards.h  align_hirschberg.h  align_local_dynprog.h  align_myers.h  align_trace.h  gaps_simple.h  gaps_sumlist.h
src/SeqAn-1.2/seqan/basic/: basic_aggregates.h  basic_allocator_multipool.h  basic_allocator_simple.h  basic_allocator_to_std.h  basic_alphabet_interface2.h  basic_alphabet_trait_basic.h  basic_compare.h  basic_counted_ptr.h  basic_holder.h  basic_holder_dynamic.h  basic_host.h  basic_iterator.h  basic_iterator_base.h  basic_logvalue.h  basic_metaprogramming.h  basic_pointer.h  basic_profchar.h  basic_profile.h  basic_sse2.h  basic_volatile_ptr.h
src/SeqAn-1.2/seqan/blast/: blast_base.h  blast_generated_forwards.h  blast_hsp_iterator.h  blast_parsing.h  blast_stream_hit_iterator.h  blast_stream_report.h
src/SeqAn-1.2/seqan/chaining/: chain_base.h  chain_meta_fragment.h  chain_point.h  chain_wrapper_point.h  chaining_generated_forwards.h  fragment.h  geom_distribution.h  range_tree.h  rmt_base.h  rmt_def_algos.h  rmt_skip_base_element.h  rt_base.h  rt_skip_base_element.h  rt_sl_base.h  score_chain_sop.h  score_manhattan.h  skip_element.h  skip_list_dynamic.h  skip_list_impl.h  skip_list_iterator.h  skip_list_type.h  tree_chain.h  tree_chain_sop.h
src/SeqAn-1.2/seqan/consensus/: consensus_base.h  consensus_generated_forwards.h  consensus_library.h  consensus_score.h
src/SeqAn-1.2/seqan/file/: chunk_collector.h  cstream.h  file_cstyle.h  file_filereaderiterator.h  file_format.h  file_format_fasta.h  file_format_genbank.h  file_format_mmap.h  file_format_raw.h  file_format_sam.h  file_page.h  string_mmap.h
src/SeqAn-1.2/seqan/find/: find_base.h  find_begin.h  find_generated_forwards.h  find_hamming_horspool.h  find_horspool.h  find_multiple_shiftand.h  find_pattern_base.h  find_shiftand.h  find_shiftor.h  find_wild_shiftand.h
src/SeqAn-1.2/seqan/find_motif/: find_motif_generated_forwards.h  find_motif_pmsp.h  find_motif_projection.h  profile.h  pseudocount_mode_c.h
src/SeqAn-1.2/seqan/graph_algorithms/: graph_algorithm.h  graph_algorithm_heap_tree.h  graph_algorithm_hmm.h  graph_algorithm_lis_his.h  graph_algorithms_generated_forwards.h
src/SeqAn-1.2/seqan/graph_align/: graph_align_banded_gotoh.h  graph_align_base.h  graph_align_config.h  graph_align_hirschberg.h  graph_align_smith_waterman.h
src/SeqAn-1.2/seqan/graph_msa/: graph_align_tcoffee_base.h  graph_align_tcoffee_io.h  graph_align_tcoffee_kmer.h  graph_align_tcoffee_library.h
src/SeqAn-1.2/seqan/graph_types/: graph_base.h  graph_drawing.h  graph_edgestump.h  graph_impl_fragment.h  graph_impl_hmm.h  graph_impl_trie.h  graph_iterator_dfs.h  graph_iterator_outedge.h  graph_iterator_vertex.h  graph_utility_parsing.h
src/SeqAn-1.2/seqan/index/: index_base.h  index_bwt.h  index_childtab.h  index_dfi.h  index_esa_algs_multi.h  index_lcp.h  index_lcp_tree.h  index_pizzachili.h  index_pizzachili_find.h  index_qgram_find.h  index_sa_lss.h  index_sa_mm.h  index_skew3.h  index_skew7.h  index_wotd.h  pipe_merger7.h  pump_extender3.h  pump_lcp_core.h  pump_separator7.h  radix.h  shape_base.h  shape_onegapped.h
src/SeqAn-1.2/seqan/map/: map_adapter_stl.h  map_base.h  map_chooser.h  map_skiplist.h  (+1 more)
src/SeqAn-1.3/seqan/: file.h  find.h  find2.h  graph_align.h  graph_types.h  parallel.h  pipe.h  seeds.h  sequence.h  sequence_journaled.h
src/samtools-0.1.18/: Makefile  Makefile.am
src/samtools-0.1.18/bcftools/: Makefile.am
src/samtools/.deps/: bam.Po  bam_aux.Po  bam_lpileup.Po  bam_maqcns.Po  bam_mate.Po  bam_pileup.Po  bam_plcmd.Po  bgzf.Po  faidx.Po  glf.Po
(+870 files in other folders)
