include $(top_srcdir)/config/tophat.mk

#SUBDIRS = samtools

#AM_CXXFLAGS = -I$(top_srcdir)/src/SeqAn-1.1

# Generated with 
# find SeqAn-1.1 -type f -print | grep -v ".svn" | sed 's/$/ \\/g'
# run from src
EXTRA_DIST = \
SeqAn-1.1/GPL.txt \
SeqAn-1.1/LGPL.txt \
SeqAn-1.1/platform_linux_gcc.h \
SeqAn-1.1/platform_windows_mingw.h \
SeqAn-1.1/platform_windows_vs.h \
SeqAn-1.1/seqan/basic/basic_aggregates.h \
SeqAn-1.1/seqan/basic/basic_allocator_chunkpool.h \
SeqAn-1.1/seqan/basic/basic_allocator_interface.h \
SeqAn-1.1/seqan/basic/basic_allocator_multipool.h \
SeqAn-1.1/seqan/basic/basic_allocator_simple.h \
SeqAn-1.1/seqan/basic/basic_allocator_singlepool.h \
SeqAn-1.1/seqan/basic/basic_allocator_to_std.h \
SeqAn-1.1/seqan/basic/basic_alphabet_interface.h \
SeqAn-1.1/seqan/basic/basic_alphabet_interface2.h \
SeqAn-1.1/seqan/basic/basic_alphabet_simple.h \
SeqAn-1.1/seqan/basic/basic_alphabet_simple_tabs.h \
SeqAn-1.1/seqan/basic/basic_alphabet_trait_basic.h \
SeqAn-1.1/seqan/basic/basic_compare.h \
SeqAn-1.1/seqan/basic/basic_converter.h \
SeqAn-1.1/seqan/basic/basic_counted_ptr.h \
SeqAn-1.1/seqan/basic/basic_debug.h \
SeqAn-1.1/seqan/basic/basic_definition.h \
SeqAn-1.1/seqan/basic/basic_forwards.h \
SeqAn-1.1/seqan/basic/basic_generated_forwards.h \
SeqAn-1.1/seqan/basic/basic_holder.h \
SeqAn-1.1/seqan/basic/basic_host.h \
SeqAn-1.1/seqan/basic/basic_iterator.h \
SeqAn-1.1/seqan/basic/basic_iterator_adapt_std.h \
SeqAn-1.1/seqan/basic/basic_iterator_adaptor.h \
SeqAn-1.1/seqan/basic/basic_iterator_base.h \
SeqAn-1.1/seqan/basic/basic_iterator_position.h \
SeqAn-1.1/seqan/basic/basic_iterator_simple.h \
SeqAn-1.1/seqan/basic/basic_metaprogramming.h \
SeqAn-1.1/seqan/basic/basic_operator.h \
SeqAn-1.1/seqan/basic/basic_pointer.h \
SeqAn-1.1/seqan/basic/basic_profile.h \
SeqAn-1.1/seqan/basic/basic_proxy.h \
SeqAn-1.1/seqan/basic/basic_tag.h \
SeqAn-1.1/seqan/basic/basic_transport.h \
SeqAn-1.1/seqan/basic/basic_type.h \
SeqAn-1.1/seqan/basic/basic_volatile_ptr.h \
SeqAn-1.1/seqan/basic.h \
SeqAn-1.1/seqan/modifier/modifier_generated_forwards.h \
SeqAn-1.1/seqan/modifier/modifier_shortcuts.h \
SeqAn-1.1/seqan/modifier/modifier_functors.h \
SeqAn-1.1/seqan/modifier/modifier_iterator.h \
SeqAn-1.1/seqan/modifier/modifier_reverse.h \
SeqAn-1.1/seqan/modifier/modifier_string.h \
SeqAn-1.1/seqan/modifier/modifier_view.h \
SeqAn-1.1/seqan/modifier.h \
SeqAn-1.1/seqan/file/chunk_collector.h \
SeqAn-1.1/seqan/file/cstream.h \
SeqAn-1.1/seqan/file/file_array.h \
SeqAn-1.1/seqan/file/file_base.h \
SeqAn-1.1/seqan/file/file_format.h \
SeqAn-1.1/seqan/file/file_format_cgviz.h \
SeqAn-1.1/seqan/file/file_format_fasta.h \
SeqAn-1.1/seqan/file/file_format_fasta_align.h \
SeqAn-1.1/seqan/file/file_format_guess.h \
SeqAn-1.1/seqan/file/file_format_raw.h \
SeqAn-1.1/seqan/file/file_forwards.h \
SeqAn-1.1/seqan/file/file_generated_forwards.h \
SeqAn-1.1/seqan/file/meta.h \
SeqAn-1.1/seqan/file/stream.h \
SeqAn-1.1/seqan/file/stream_algorithms.h \
SeqAn-1.1/seqan/file.h \
SeqAn-1.1/seqan/find/find_base.h \
SeqAn-1.1/seqan/find/find_generated_forwards.h \
SeqAn-1.1/seqan/find/find_horspool.h \
SeqAn-1.1/seqan/find/find_multi.h \
SeqAn-1.1/seqan/find/find_multiple_shiftand.h \
SeqAn-1.1/seqan/find/find_score.h \
SeqAn-1.1/seqan/find/find_set_horspool.h \
SeqAn-1.1/seqan/find.h \
SeqAn-1.1/seqan/index/index_base.h \
SeqAn-1.1/seqan/index/index_find.h \
SeqAn-1.1/seqan/index/index_generated_forwards.h \
SeqAn-1.1/seqan/index/index_manual_forwards.h \
SeqAn-1.1/seqan/index/index_sa_lss.h \
SeqAn-1.1/seqan/index/shape_base.h \
SeqAn-1.1/seqan/index/shape_gapped.h \
SeqAn-1.1/seqan/index/shape_predefined.h \
SeqAn-1.1/seqan/index.h \
SeqAn-1.1/seqan/platform.h \
SeqAn-1.1/seqan/sequence/lexical.h \
SeqAn-1.1/seqan/sequence/segment_base.h \
SeqAn-1.1/seqan/sequence/segment_infix.h \
SeqAn-1.1/seqan/sequence/segment_prefix.h \
SeqAn-1.1/seqan/sequence/segment_suffix.h \
SeqAn-1.1/seqan/sequence/sequence_forwards.h \
SeqAn-1.1/seqan/sequence/sequence_generated_forwards.h \
SeqAn-1.1/seqan/sequence/sequence_interface.h \
SeqAn-1.1/seqan/sequence/sequence_multiple.h \
SeqAn-1.1/seqan/sequence/sequence_shortcuts.h \
SeqAn-1.1/seqan/sequence/std_string.h \
SeqAn-1.1/seqan/sequence/string_alloc.h \
SeqAn-1.1/seqan/sequence/string_array.h \
SeqAn-1.1/seqan/sequence/string_base.h \
SeqAn-1.1/seqan/sequence/string_cstyle.h \
SeqAn-1.1/seqan/sequence/string_packed.h \
SeqAn-1.1/seqan/sequence/string_pointer.h \
SeqAn-1.1/seqan/sequence/string_stack.h \
SeqAn-1.1/seqan/sequence/string_value_expand.h \
SeqAn-1.1/seqan/sequence.h 


#-- progs to be installed in $prefix/bin
bin_PROGRAMS = \
	prep_reads \
	tophat_reports \
	juncs_db \
	gff_juncs \
	extract_reads \
    segment_juncs \
	closure_juncs \
	long_spanning_reads \
	fix_map_ordering \
	library_stats \
	mask_sam \
	wiggles
 

#-- scripts to be installed in $prefix/bin
dist_bin_SCRIPTS = \
	contig_to_chr_coords.py \
	tophat.py \
	bed_to_juncs.py


#-- tophat library for linking convienence
noinst_LIBRARIES = libtophat.a
noinst_HEADERS = \
	reads.h \
	common.h \
	bwt_map.h \
	wiggles.h \
	junctions.h \
	assert_helpers.h \
	alphabet.h \
	timer.h \
	closures.h \
	FSA/regexp.h \
	FSA/gff.h \
	FSA/misc.h \
	FSA/sequence.h \
	FSA/fsa_alphabet.h \
	tokenize.h \
	fragments.h \
	inserts.h \
	segments.h \
    genes.h \
	qual.h

	
libtophat_a_SOURCES = \
	reads.cpp \
	alphabet.c \
	bwt_map.cpp \
	common.cpp \
	junctions.cpp \
	FSA/regexp.cc \
	FSA/gff.cc \
	FSA/misc.cc \
	FSA/sequence.cc \
	FSA/fsa_alphabet.cc \
	fragments.cpp \
	tokenize.cpp \
	inserts.cpp \
    genes.cpp \
	qual.cpp

#-- program sources

prep_reads_SOURCES = prep_reads.cpp
prep_reads_LDADD = $(top_builddir)/src/libtophat.a

segment_juncs_SOURCES = segment_juncs.cpp
segment_juncs_LDADD = $(top_builddir)/src/libtophat.a 

long_spanning_reads_SOURCES = long_spanning_reads.cpp
long_spanning_reads_LDADD = $(top_builddir)/src/libtophat.a

gff_juncs_SOURCES = gff_juncs.cpp
gff_juncs_LDADD = $(top_builddir)/src/libtophat.a

juncs_db_SOURCES = juncs_db.cpp
juncs_db_LDADD = $(top_builddir)/src/libtophat.a

library_stats_SOURCES = library_stats.cpp
library_stats_LDADD = $(top_builddir)/src/libtophat.a

tophat_reports_SOURCES = tophat_reports.cpp
tophat_reports_LDADD = $(top_builddir)/src/libtophat.a 

extract_reads_SOURCES = extract_reads.cpp
extract_reads_LDADD = $(top_builddir)/src/libtophat.a

fix_map_ordering_SOURCES = fix_map_ordering.cpp
fix_map_ordering_LDADD = $(top_builddir)/src/libtophat.a

closure_juncs_SOURCES = closures.cpp
closure_juncs_LDADD = $(top_builddir)/src/libtophat.a

mask_sam_SOURCES = mask_sam.cpp
mask_sam_LDADD = $(top_builddir)/src/libtophat.a

wiggles_SOURCES = wiggles.cpp
wiggles_LDADD = $(top_builddir)/src/libtophat.a
